--- a/titanic_kaggle.ipynb
+++ b/titanic_kaggle.ipynb
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e8cf9f11",
+   "id": "09e1852a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3898,7 +3898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6707c4c8",
+   "id": "489a0e99",
    "metadata": {},
    "source": [
     "# Use OneHotEncoding on gender feature"
@@ -3907,7 +3907,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c4e7e560",
+   "id": "3ef965c1",
    "metadata": {},
    "outputs": [
     {
@@ -4050,7 +4050,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "9e84a3c7",
+   "id": "92b599e0",
    "metadata": {},
    "outputs": [
     {
@@ -4191,7 +4191,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "aa3b233d",
+   "id": "c5ef944a",
    "metadata": {},
    "outputs": [
     {
@@ -4214,8 +4214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "caa79b20",
+   "execution_count": 64,
+   "id": "35c62b1e",
    "metadata": {},
    "outputs": [
     {
@@ -4254,62 +4254,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4317,25 +4317,25 @@
       ],
       "text/plain": [
        "   Pclass  Age  Fare  Embarked  Title  IsAlone  Age*Class  Male  Female\n",
-       "0       3    1     0         0      1        0          3   1.0     0.0\n",
-       "1       1    2     3         1      3        0          2   0.0     1.0\n",
-       "2       3    1     1         0      2        1          3   0.0     1.0\n",
-       "3       1    2     3         0      3        0          2   0.0     1.0\n",
-       "4       3    2     1         0      1        1          6   1.0     0.0"
+       "0       3    2     0         2      1        1          6   1.0     0.0\n",
+       "1       3    2     0         0      3        0          6   0.0     1.0\n",
+       "2       2    3     1         2      1        1          6   1.0     0.0\n",
+       "3       3    1     1         0      1        1          3   1.0     0.0\n",
+       "4       3    1     1         0      3        0          3   0.0     1.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train.head()"
+    "X_test.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96bde373",
+   "id": "5e945bdb",
    "metadata": {},
    "source": [
     "# Modeling"
@@ -4344,7 +4344,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "03aed5e9",
+   "id": "0e86564f",
    "metadata": {},
    "outputs": [
     {
@@ -4371,7 +4371,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8d64ac2e",
+   "id": "31d7b4a0",
    "metadata": {},
    "outputs": [
     {
@@ -4481,7 +4481,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e1c5fe2e",
+   "id": "3d5bee88",
    "metadata": {},
    "outputs": [
     {
@@ -4508,7 +4508,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "89e04829",
+   "id": "78fa65cb",
    "metadata": {},
    "outputs": [
     {
@@ -4535,7 +4535,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a6ab10b4",
+   "id": "2173e5cf",
    "metadata": {},
    "outputs": [
     {
@@ -4562,7 +4562,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2bf1a353",
+   "id": "c6520658",
    "metadata": {},
    "outputs": [
     {
@@ -4589,7 +4589,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "36c98de0",
+   "id": "fa5ad759",
    "metadata": {},
    "outputs": [
     {
@@ -4624,7 +4624,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6be25c91",
+   "id": "65a0412b",
    "metadata": {},
    "outputs": [
     {
@@ -4651,7 +4651,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c33410a7",
+   "id": "8df37546",
    "metadata": {},
    "outputs": [
     {
@@ -4678,7 +4678,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e3206239",
+   "id": "909e0161",
    "metadata": {},
    "outputs": [
     {
@@ -4705,11 +4705,145 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f02c70da",
+   "id": "9856476c",
    "metadata": {},
    "source": [
-    "# Model evaluati"
+    "# Model evaluation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a12a3a0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>86.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>86.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>84.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>80.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Linear SVC</td>\n",
+       "      <td>79.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Support Vector Machines</td>\n",
+       "      <td>78.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Naive Bayes</td>\n",
+       "      <td>75.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Stochastic Gradient Decent</td>\n",
+       "      <td>73.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Perceptron</td>\n",
+       "      <td>68.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Model  Score\n",
+       "3               Random Forest  86.76\n",
+       "8               Decision Tree  86.76\n",
+       "1                         KNN  84.06\n",
+       "2         Logistic Regression  80.36\n",
+       "7                  Linear SVC  79.12\n",
+       "0     Support Vector Machines  78.34\n",
+       "4                 Naive Bayes  75.76\n",
+       "6  Stochastic Gradient Decent  73.06\n",
+       "5                  Perceptron  68.80"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models = pd.DataFrame({\n",
+    "    'Model': ['Support Vector Machines', 'KNN', 'Logistic Regression', \n",
+    "              'Random Forest', 'Naive Bayes', 'Perceptron', \n",
+    "              'Stochastic Gradient Decent', 'Linear SVC', \n",
+    "              'Decision Tree'],\n",
+    "    'Score': [acc_svc, acc_knn, acc_log, \n",
+    "              acc_random_forest, acc_gaussian, acc_perceptron, \n",
+    "              acc_sgd, acc_linear_svc, acc_decision_tree]})\n",
+    "models.sort_values(by='Score', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2cb5d5ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Submit a csv for the Kaggle Competition\n",
+    "submission = pd.DataFrame({\n",
+    "        \"PassengerId\": test_df[\"PassengerId\"],\n",
+    "        \"Survived\": Y_pred\n",
+    "    })\n",
+    "submission.to_csv(r\"C:\\Users\\jan.lade\\OneDrive - Jedox AG\\Documents\\GitHub\\titanic\\submission.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "272b49bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
